syntax = "proto3";

package player;

option go_package = "./gen";

service PlayerService {
  rpc BuildImage (BuildImageRequest) returns (BuildImageResponse);
  rpc CreateAndStartContainer (CreateAndStartContainerRequest) returns (CreateAndStartContainerResponse);
  rpc StopContainer (StopContainerRequest) returns (GenericResponse);
  rpc RemoveContainer (RemoveContainerRequest) returns (GenericResponse);
}

message BuildImageRequest {
  string service_name = 1;
  string repo_url = 2;
  string branch = 3;
  string commit_hash = 4;
}

message BuildImageResponse {
  string internal_tag = 1;
}

message CreateAndStartContainerRequest {
  string image_tag = 1;
  map<string, string> env = 2;
}

message CreateAndStartContainerResponse {
  string container_id = 1;
}

message StopContainerRequest {
  string container_id = 1;
}

message RemoveContainerRequest {
  string container_id = 1;
}

message GenericResponse {
  string message = 1;
}